; ModuleID = '/home/carl/AnghaBench/stb/extr_stb_vorbis.c_go_to_page_before.c'
source_filename = "/home/carl/AnghaBench/stb/extr_stb_vorbis.c_go_to_page_before.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32)* @go_to_page_before to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @go_to_page_before(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp uge i32 %8, 65536
  br i1 %9, label %10, label %20

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = sub i32 %11, 65536
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp uge i32 %12, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %10
  %18 = load i32, i32* %5, align 4
  %19 = sub i32 %18, 65536
  store i32 %19, i32* %6, align 4
  br label %24

20:                                               ; preds = %10, %2
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %20, %17
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @set_file_offset(%struct.TYPE_6__* %25, i32 %26)
  br label %28

28:                                               ; preds = %42, %24
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %30 = call i64 @vorbis_find_page(%struct.TYPE_6__* %29, i32* %7, i32* null)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %46

32:                                               ; preds = %28
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %5, align 4
  %35 = icmp uge i32 %33, %34
  br i1 %35, label %36, label %42

36:                                               ; preds = %32
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %38 = call i32 @stb_vorbis_get_file_offset(%struct.TYPE_6__* %37)
  %39 = load i32, i32* %5, align 4
  %40 = icmp ult i32 %38, %39
  br i1 %40, label %41, label %42

41:                                               ; preds = %36
  store i32 1, i32* %3, align 4
  br label %47

42:                                               ; preds = %36, %32
  %43 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %44 = load i32, i32* %7, align 4
  %45 = call i32 @set_file_offset(%struct.TYPE_6__* %43, i32 %44)
  br label %28

46:                                               ; preds = %28
  store i32 0, i32* %3, align 4
  br label %47

47:                                               ; preds = %46, %41
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i32 @set_file_offset(%struct.TYPE_6__*, i32) #1

declare dso_local i64 @vorbis_find_page(%struct.TYPE_6__*, i32*, i32*) #1

declare dso_local i32 @stb_vorbis_get_file_offset(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
